Fix rows for items/pokemon/pokedex - rows will now properly align when resizing window

--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ html, body {
 }
 .items {
 	overflow-y: scroll;
+	overflow-x: hidden;
 	height: 80vh; 
 }
 .item_img {
